--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,133 +7,137 @@
     tools:context=".RegisterActivity"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ke_ntds"
-        android:textColor="@color/orchid"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ke_ntds"
+            android:textColor="@color/orchid"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"/>
 
-    <TextView
-        android:id="@+id/txtLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/registration"
-        android:textColor="@color/white"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textView" />
+        <TextView
+            android:id="@+id/txtLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/registration"
+            android:textColor="@color/white"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/textView" />
 
-    <EditText
-        android:id="@+id/edtRegUsername"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:background="@drawable/input_bg"
-        android:drawableStart="@drawable/ic_baseline_person_24"
-        android:drawablePadding="8dp"
-        android:ems="10"
-        android:hint="@string/username"
-        android:inputType="textPersonName"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:layout_marginTop="40dp"
-        android:layout_below="@+id/txtLogin"
-        android:layout_centerHorizontal="true"
-        android:autofillHints=""/>
+        <EditText
+            android:id="@+id/edtRegUsername"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:background="@drawable/input_bg"
+            android:drawableStart="@drawable/ic_baseline_person_24"
+            android:drawablePadding="8dp"
+            android:ems="10"
+            android:hint="@string/username"
+            android:inputType="textPersonName"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_marginTop="40dp"
+            android:layout_below="@+id/txtLogin"
+            android:layout_centerHorizontal="true"
+            android:autofillHints=""/>
 
-    <EditText
-        android:id="@+id/edtRegEmail"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:background="@drawable/input_bg"
-        android:drawableStart="@drawable/ic_baseline_email_24"
-        android:drawablePadding="8dp"
-        android:ems="10"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/edtRegUsername"
-        android:layout_centerHorizontal="true"
-        android:autofillHints="" />
+        <EditText
+            android:id="@+id/edtRegEmail"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:background="@drawable/input_bg"
+            android:drawableStart="@drawable/ic_baseline_email_24"
+            android:drawablePadding="8dp"
+            android:ems="10"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_marginTop="16dp"
+            android:layout_below="@+id/edtRegUsername"
+            android:layout_centerHorizontal="true"
+            android:autofillHints="" />
 
-    <EditText
-        android:id="@+id/edtRegPassword"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:background="@drawable/input_bg"
-        android:drawableStart="@drawable/ic_baseline_security_24"
-        android:drawablePadding="8dp"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/edtRegEmail"
-        android:layout_centerHorizontal="true"
-        android:autofillHints="" />
+        <EditText
+            android:id="@+id/edtRegPassword"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:background="@drawable/input_bg"
+            android:drawableStart="@drawable/ic_baseline_security_24"
+            android:drawablePadding="8dp"
+            android:ems="10"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_marginTop="16dp"
+            android:layout_below="@+id/edtRegEmail"
+            android:layout_centerHorizontal="true"
+            android:autofillHints="" />
 
-    <EditText
-        android:id="@+id/edtRegConfirmPassword"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:background="@drawable/input_bg"
-        android:drawableStart="@drawable/ic_baseline_security_24"
-        android:drawablePadding="8dp"
-        android:ems="10"
-        android:hint="@string/confirm_password"
-        android:inputType="textPassword"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/edtRegPassword"
-        android:layout_centerHorizontal="true"
-        android:autofillHints="" />
+        <EditText
+            android:id="@+id/edtRegConfirmPassword"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:background="@drawable/input_bg"
+            android:drawableStart="@drawable/ic_baseline_security_24"
+            android:drawablePadding="8dp"
+            android:ems="10"
+            android:hint="@string/confirm_password"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:layout_marginTop="16dp"
+            android:layout_below="@+id/edtRegPassword"
+            android:layout_centerHorizontal="true"
+            android:autofillHints="" />
 
-    <Button
-        android:id="@+id/btnRegister"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:background="@drawable/btn_bg"
-        android:text="@string/register"
-        android:layout_marginTop="48dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/edtRegConfirmPassword"/>
+        <Button
+            android:id="@+id/btnRegister"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:background="@drawable/btn_bg"
+            android:text="@string/register"
+            android:layout_marginTop="48dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/edtRegConfirmPassword"/>
 
-    <TextView
-        android:id="@+id/txtRegLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/already_registered_login"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_marginTop="36dp"
-        android:layout_below="@+id/btnRegister"
-        android:layout_centerHorizontal="true"/>
+        <TextView
+            android:id="@+id/txtRegLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/already_registered_login"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="36dp"
+            android:layout_below="@+id/btnRegister"
+            android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
 
-</RelativeLayout>
+</ScrollView>
