--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,95 +8,100 @@
     android:orientation="vertical"
     android:background="@drawable/back1">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ke_ntds"
-        android:textColor="@color/white"
-        android:textSize="34sp"
-        android:layout_marginTop="50dp"
-        android:layout_centerHorizontal="true"
-        android:textStyle="bold"
-        android:layout_marginBottom="50dp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ke_ntds"
+            android:textColor="@color/white"
+            android:textSize="34sp"
+            android:layout_marginTop="50dp"
+            android:layout_centerHorizontal="true"
+            android:textStyle="bold"
+            android:layout_marginBottom="50dp"/>
 
-    <TextView
-        android:id="@+id/txtLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView"
-        android:text="@string/login"
-        android:textColor="@color/white"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"/>
+        <TextView
+            android:id="@+id/txtLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView"
+            android:text="@string/login"
+            android:textColor="@color/white"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="50dp"/>
 
-    <EditText
-        android:id="@+id/edtRegUsername"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:background="@drawable/input_bg"
-        android:drawableStart="@drawable/ic_baseline_person_24"
-        android:drawablePadding="5dp"
-        android:ems="10"
-        android:hint="@string/username"
-        android:inputType="textPersonName"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textColorHint="@color/white"
-        android:layout_below="@id/txtLogin"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="25dp"
-        android:autofillHints="" />
+        <EditText
+            android:id="@+id/edtRegUsername"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:background="@drawable/input_bg"
+            android:drawableStart="@drawable/ic_baseline_person_24"
+            android:drawablePadding="5dp"
+            android:ems="10"
+            android:hint="@string/username"
+            android:inputType="textPersonName"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textColorHint="@color/white"
+            android:layout_below="@id/txtLogin"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="25dp"
+            android:autofillHints="" />
 
-    <EditText
-        android:id="@+id/edtRegPassword"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:background="@drawable/input_bg"
-        android:drawableStart="@drawable/ic_baseline_security_24"
-        android:drawablePadding="10dp"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textColorHint="@color/white"
-        android:layout_below="@id/edtRegUsername"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="80dp"
-        android:autofillHints="" />
+        <EditText
+            android:id="@+id/edtRegPassword"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:ems="10"
+            android:background="@drawable/input_bg"
+            android:drawableStart="@drawable/ic_baseline_security_24"
+            android:drawablePadding="10dp"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textColorHint="@color/white"
+            android:layout_below="@id/edtRegUsername"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="80dp"
+            android:autofillHints="" />
 
-    <Button
-        android:id="@+id/btnRegister"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:text="@string/login"
-        android:background="@drawable/btn_bg"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/edtRegPassword"
-        android:layout_marginBottom="50dp"/>
+        <Button
+            android:id="@+id/btnRegister"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:text="@string/btn_login"
+            android:textSize="24sp"
+            android:background="@drawable/btn_bg"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/edtRegPassword"
+            android:layout_marginBottom="50dp"/>
 
-    <TextView
-        android:id="@+id/txtRegLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/new_use_register"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:layout_centerHorizontal="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_below="@+id/btnRegister" />
-</RelativeLayout>
+        <TextView
+            android:id="@+id/txtRegLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/new_use_register"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="24sp"
+            android:layout_centerHorizontal="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_below="@+id/btnRegister" />
+    </RelativeLayout>
+</ScrollView>
